--- a/src/assets/style/companents/_index.scss
+++ b/src/assets/style/companents/_index.scss
@@ -1,2 +1,12 @@
 @import "./header-top";
 @import "./root";
+@import "./header-content";
+@import "./main/section-one.scss";
+@import "./main/section-two";
+@import "./main/section-three";
+@import "./main/section-four";
+@import "./main/section-five";
+@import "./main/section-seven";
+@import "./footer";
+@import "./drawer";
+@import "./men-page";
