--- a/src/assets/style/base/_baze.scss
+++ b/src/assets/style/base/_baze.scss
@@ -24,5 +24,5 @@ button {
 html,
 body {
     font-family: "Poppins", sans-serif;
-    background-color: whitesmoke;
+    background-color: #F8F8F8;;
 }
