--- a/src/assets/style/companents/_index.scss
+++ b/src/assets/style/companents/_index.scss
@@ -9,4 +9,5 @@
 @import "./main/section-seven";
 @import "./footer";
 @import "./drawer";
-@import "./men-page";
+@import "./sport-page";
+@import "./sport-page_cards";
