add trainers card

--- a/src/assets/style/companents/_sport-page_cards.scss
+++ b/src/assets/style/companents/_sport-page_cards.scss
@@ -35,6 +35,7 @@
         &-all{
             display: flex;
             flex-wrap: wrap;
+            max-width: 1562px;
             &-one{
             width: 218px;
             height: 356px;
