--- a/src/assets/style/companents/_sport-page_cards.scss
+++ b/src/assets/style/companents/_sport-page_cards.scss
@@ -37,15 +37,16 @@
             flex-wrap: wrap;
             max-width: 1562px;
             &-one{
-            width: 218px;
-            height: 356px;
-            margin-left: 350px;
-            margin-top: 35px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px 0px rgba(73, 118, 232, 0.10);
-            background: #fff;
-            gap: 50px;
-            cursor: pointer;
+                width: 218px;
+                height: 356px;
+                margin-left: 350px;
+                margin-top: 35px;
+                border-radius: 10px;
+                box-shadow: 0px 4px 10px 0px rgba(73, 118, 232, 0.10);
+                background: #fff;
+                gap: 50px;
+                cursor: pointer;
+                transition: 0.3s;
             &-all{
                 width: 218px;
                 height: 356px;
@@ -125,6 +126,9 @@
         }
          
     }
+    &-one:hover{
+        transform: scale(1.1);
+    }
     &-two{
             width: 218px;
             height: 356px;
@@ -135,6 +139,7 @@
             background: #fff;
             gap: 50px;
             cursor: pointer;
+            transition: 0.3s;
             &_img{
                 margin-top: -50px;
                 margin-left: 20px;
@@ -150,6 +155,9 @@
             &_items{
                 margin-top: -45px;
             }
+   }
+   &-two:hover{
+    transform: scale(1.1);
    }
         }
         &-pagination{
