--- a/src/assets/style/companents/_trainers.scss
+++ b/src/assets/style/companents/_trainers.scss
@@ -28,62 +28,19 @@
                 margin-top: 78px;
             }
             &-two {
-                width: 55px;
-                height: 60px;
-                padding: 0px 1px 8px 1px;
-                border-radius: 10px;
-                border: 1px solid var(--Foundation-Blue-blue-600, #27376f);
-                background: #ebebeb;
-                margin-left: 50px;
-                margin-top: 20px;
-                cursor: pointer;
-            }
-            &-three {
-                width: 55px;
-                height: 60px;
-                padding-top: 12px;
-                border-radius: 10px;
-                border: 0.5px solid #c8c8c8;
-                background: #ebebeb;
-                margin-left: 50px;
-                margin-top: 20px;
-                cursor: pointer;
-            }
-            &-four {
-                width: 55px;
-                height: 60px;
-                border-radius: 10px;
-                border: 0.5px solid #c8c8c8;
-                background: #ebebeb;
-                margin-left: 50px;
-                margin-top: 20px;
-                cursor: pointer;
-            }
-            &-five {
-                width: 55px;
-                height: 60px;
-                padding-top: 10px;
-                padding-left: 3px;
-                border-radius: 10px;
-                border: 0.5px solid #c8c8c8;
-                background: #ebebeb;
-                margin-left: 50px;
-                margin-top: 20px;
-                cursor: pointer;
-            }
-            &-six {
+                
                 margin-left: 63px;
                 margin-top: 20px;
             }
-            &-seven {
-                margin-left: 170px;
-                margin-top: -380px;
+            &-three {
+                 margin-left: 170px;
+                margin-top: -410px;
                 background: lightgray;
                 border-radius: 10px;
                 width: 430px;
                 height: 486px;
                 padding-top: 60px;
-                &-img {
+                img {
                     width: 421px;
                     height: 378px;
                     top: -18px;
@@ -91,6 +48,14 @@
                 }
             }
         }
+    }
+    &-btn{
+        margin-top: 20px;
+        margin-left: 50px;
+    }
+    &-btn button{
+        border: none;
+        border-radius: 10px;
     }
     &_ranglar {
         margin-left: 650px;
