--- a/src/assets/style/companents/main/_section-two.scss
+++ b/src/assets/style/companents/main/_section-two.scss
@@ -21,6 +21,7 @@
         box-shadow: 0px 4px 10px 0px rgba(73, 118, 232, 0.10);
         background: #fff;
         gap: 50px;
+        transition: 0.2s;
         &_hot{
             width: 54px;
             height: 22px;
@@ -74,6 +75,9 @@
             margin-top: 12px;
             font-weight: 600;
         }
+    }
+    &_card-one:hover{
+            transform: scale(1.1);
     }
    
     &_btn-two{
